--- a/packages/BUILD
+++ b/packages/BUILD
@@ -3,14 +3,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 deb_pkg(
     name = "ca-certs",
-    pkg_name = "ca-certificates",
+    pkg_name = "ca-certificates-java",
+    source = "@debian_jessie//file",
 )
 
 go_binary(
     name = "deb_getter",
-    srcs = ["packages.go"],
-    data = ["@debian_jessie//file"],
+    srcs = ["main.go"],
 )
-
-
-
