--- a/packages/BUILD
+++ b/packages/BUILD
@@ -1,5 +1,5 @@
 load("//packages:deb_pkg.bzl", "deb_pkg")
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 deb_pkg(
     name = "ca-certs",
@@ -9,5 +9,19 @@ deb_pkg(
 
 go_binary(
     name = "deb_getter",
+    library = ":go_default_library",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "go_default_library",
     srcs = ["main.go"],
+    visibility = ["//visibility:private"],
+    deps = ["//packages/parse:go_default_library"],
+)
+
+go_binary(
+    name = "packages",
+    library = ":go_default_library",
+    visibility = ["//visibility:public"],
 )
