--- a/packages/deb_pkg/BUILD
+++ b/packages/deb_pkg/BUILD
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_binary(
-    name = "deb_pkg_getter",
+    name = "deb_pkg",
     library = ":go_default_library",
     visibility = ["//visibility:public"],
 )
@@ -10,5 +10,5 @@ go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     visibility = ["//visibility:private"],
-    deps = ["//packages/deb_pkg_getter/parse:go_default_library"],
+    deps = ["//packages/deb_pkg/parse:go_default_library"],
 )
