--- a/packages/deb_pkg/cloudbuild.yaml
+++ b/packages/deb_pkg/cloudbuild.yaml
@@ -1,12 +1,28 @@
 steps:
-- name: gcr.io/cloud-builders/golang-project
+- name: gcr.io/cloud-builders/go:wheezy
   args: [
+    'build',
+    '-o', 'debgetter-darwin',
     'github.com/GoogleCloudPlatform/distroless/packages/deb_pkg',
-    '--tag=gcr.io/$PROJECT_ID/deb_pkg'
   ]
+  env: ['GOOS=linux']
+- name: gcr.io/cloud-builders/go:wheezy
+  args: [
+    'build',
+    '-o', 'debgetter-linux',
+    'github.com/GoogleCloudPlatform/distroless/packages/deb_pkg'
+  ]
+  env: ['GOOS=darwin']
+- name: gcr.io/cloud-builders/go:wheezy
+  args: [
+    'build',
+    '-o', 'debgetter-windows',
+    'github.com/GoogleCloudPlatform/distroless/packages/deb_pkg',
+  ]
+  env: ['GOOS=windows']
 - name: gcr.io/cloud-builders/gsutil
   args: [
-    'cp',
-    'gopath/bin/deb_pkg',
-    'gs://$PROJECT_ID/$TAG_NAME/deb_pkg'
+    'cp', '-r',
+    'debgetter-*',
+    'gs://$PROJECT_ID/'
   ]
