Refactor dpkg rules
* Allows multiple sources on the dpkg() rule
* Automatically renames packages that are not valid bazel rule names.
Prints out a warning with instructions on how to reference the
resulting deb.
* Allows multiple packages to be part of the same dpkg() rule
* Bumps version of dpkg_parser.par to v0.2

--- a/base/BUILD
+++ b/base/BUILD
@@ -32,9 +32,9 @@ docker_build(
     name = "base",
     base = ":with_tmp",
     debs = [
-        "@libc6//file:pkg.deb",
-        "@libssl1.0.0//file:pkg.deb",
-        "@openssl//file:pkg.deb",
+        "@package_bundle//file:libc6.deb",
+        "@package_bundle//file:libssl1.0.0.deb",
+        "@package_bundle//file:openssl.deb",
     ],
     tars = [
         ":base_passwd.passwd.tar",
