--- a/python2.7/BUILD
+++ b/python2.7/BUILD
@@ -7,10 +7,10 @@ docker_build(
     name = "python27",
     base = "//base:base",
     debs = [
-        "@zlib1g//file:pkg.deb",
-        "@python2.7-minimal//file:pkg.deb",
-        "@libpython2.7-minimal//file:pkg.deb",
-        "@libpython2.7-stdlib//file:pkg.deb",
+        "@package_bundle//file:zlib1g.deb",
+        "@package_bundle//file:python2.7-minimal.deb",
+        "@package_bundle//file:libpython2.7-minimal.deb",
+        "@package_bundle//file:libpython2.7-stdlib.deb",
     ],
     entrypoint = [
         "/usr/bin/python2.7",
